	    - PosixClass instances behave like Property ones, e.g. support #negative?
	    - #scan emits :(non)posixclass, :<type> instead of :set, :char_(non)<type>
	* Changed Expression emissions for some escape sequences
	  - EscapeSequence::Codepoint, CodepointList, Hex and Octal are now all used
	  - they already existed, but were all parsed as EscapeSequence::Literal
	  - e.g. \x97 is now EscapeSequence::Hex instead of EscapeSequence::Literal 
	* Changed naming of many property tokens (emitted for \p{...})
	  - if you work with these tokens, see PR #56 for details
	  - e.g. :punct_dash is now :dash_punctuation
	* Fixed ruby version mapping of some properties
	* Fixed scanning of some property spellings, e.g. with dashes
	* Fixed some incorrect property alias normalizations
	* Added support for all previously missing properties (about 250)
	* Added Expression::UnicodeProperty#shortcut (e.g. returns 'm' for '\p{mark}')
	* Bumped version to XXX

Sun Apr 29 2018 Janosch Müller <janosch84@gmail.com>

	* Changed handling of Ruby versions (PR #53)
	  - New Ruby versions are now supported by default
	  - Some deep-lying APIs have changed, which should not affect most users:
	    - `Regexp::Syntax::VERSIONS` is gone
	    - Syntax version names have changed from `Regexp::Syntax::Ruby::Vnnn`
	      to `Regexp::Syntax::Vn_n_n`
	    - Syntax version classes for Ruby versions without regex feature changes
	      are no longer predefined and are now only created on demand / lazily
	    - `Regexp::Syntax::supported?` returns true for any argument >= 1.8.6
	* Fixed some use cases of Expression methods #strfregexp and #to_h (@e738107)
	* Added full signature support to collection methods of Expressions (@aa7c55a)
	* Bumped version to 0.5.0

Tue Apr 4 2018 ammarabuali@gmail.com <ammarabuali@gmail.com>

	* Added ruby version files for 2.2.10 and 2.3.7
	* Bumped version to 0.4.13

Fri Mar 30 2018 Janosch Müller <janosch84@gmail.com>

	* Added ruby version files for 2.4.4 and 2.5.1